--- a/src/Notifications.Service/App.config
+++ b/src/Notifications.Service/App.config
@@ -71,7 +71,7 @@
         ulearn.telegram.botToken
         ulearn.telegram.errors.channel 
     -->  
-    <appender name="TelegramAppender" type="ulearn.Logging.TelegramAppender, uLearn">
+    <appender name="TelegramAppender" type="ulearn.Logging.TelegramAppender, Core">
       <threshold value="Error" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date %-5level %logger — %message%newline" />
