--- a/src/Notifications/packages.config
+++ b/src/Notifications/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
   <package id="Graphite" version="1.3.0.0" targetFramework="net47" />
+  <package id="Ionic.Zip" version="1.9.1.8" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
+  <package id="MarkdownDeep.NET.Core" version="1.5.0.3" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net47" />
@@ -12,10 +14,20 @@
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.6.1" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.6.1" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.0" targetFramework="net47" />
+  <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="NETStandard.Library" version="2.0.1" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="NUnit" version="3.9.0" targetFramework="net47" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
@@ -47,6 +59,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
@@ -72,4 +85,5 @@
   <package id="System.Xml.XPath" version="4.3.0" targetFramework="net47" />
   <package id="System.Xml.XPath.XDocument" version="4.3.0" targetFramework="net47" />
   <package id="Telegram.Bot" version="13.2.1" targetFramework="net47" />
+  <package id="UnidecodeSharpCore" version="1.0.0" targetFramework="net47" />
 </packages>
