--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -4,10 +4,16 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
 	<appSettings>
+		<!-- Url to Ulearn.Web instance. I.E. https://ulearn.me -->
 		<add key="submissionsUrl" value="https://localhost:44300/" />
+		<!-- Must be equal on Ulearn.Web and RunCsJob instance -->
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
 		<add key="sleepSeconds" value="1" />
 		<add key="jobsToRequest" value="5" />
+		<add key="ulearn.runcsjob.threadsCount" value="1" />
+		<!-- Directory for compiling msbuild solutions. By default it's ./submissions in current directory -->
+		<add key="ulearn.runcsjob.submissionsWorkingDirectory" value="" />
+		<!-- Delete submissions after checking -->
 		<add key="ulearn.runcsjob.deleteSubmissions" value="true" />
 	</appSettings>
 	<startup> 
