--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -1,4 +1,5 @@
 ﻿{        
+    "coursesDirectory": "../Courses",
     "telegram": {        
         "botToken": "293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg",
         "errors": {
