--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="NUnit" version="3.7.1" targetFramework="net47" />
+  <package id="OctoPack" version="3.6.3" targetFramework="net47" developmentDependency="true" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
