--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -91,6 +91,7 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net47" />
   <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net47" />
+  <package id="System.Configuration.ConfigurationManager" version="4.4.1" targetFramework="net47" />
   <package id="System.Console" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.3.0" targetFramework="net47" />
@@ -127,6 +128,7 @@
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.ProtectedData" version="4.4.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net47" />
